--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,57 +1,18 @@
-.tourdate-item {
-    padding: 50px 32px 0 28px;
-    position: relative;
-    color: #000000;
-    border-left: 2px solid;
-    letter-spacing: 5px;
+.navbar {
+  margin-bottom: 0;
+  border-radius: 0;
+  background-color: #0000000;
+  color: #FFFFFF;
+  padding: 2% 0;
+  font-size: 1.3em;
+  border: 0;
 }
-
-.tourdate-item p {
-    color: #5d33ce;
-    padding-left: 0;
-    margin: 0;
-    letter-spacing: 5px;
-}
-
-.tourdate-item::before {
-    position: absolute;
-    left: 40px;
-    display: block;
-    font-family: "Exo", sans-serif;
-    font-weight: 500;
-    font-size: 12px;
-}
-
-.tourdate-item::after {
-    width: 12px;
-    height: 12px;
-    display: block;
-    top: 75px;
-    position: absolute;
-    left: -7px;
-    border-radius: 12px;
-    content: '';
-    background: #000000;
-    border: #5d33ce solid;
-}
-
-.tourtimeline {
-    padding-bottom: 100px;
-}
-
-.ticket-colourbck a {
-    background-color: #ffffff;
-    color: #000000;
-    width: 100%;
-    transition: color 1s ease-in;
-}
-
-.ticket-colourbck {
-    color: #000000;
-    border-color: #000000;
-    border: solid 1px;
-    margin: 10px;
-    text-align: center;
-}
-
-/*-------------------------------
+ .navbar-brand{
+    float: left;
+    min-height:66px;
+    padding: 0 20px 5px;
+  }
+   .navbar-inverse .navbar-nav .active a, .navbar-inverse .navbar-nav .active a:focus, .navbar-inverse
+.navbar-nav .active a:hover {
+color: #FFF;
+background-color: #000000 }
